--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<dependency>
 	<groupId>org.projectlombok</groupId>
 	<artifactId>lombok</artifactId>
-	<version>1.16.20</version>
+	<version>1.18.6</version>
 </dependency>
   </dependencies>
 
@@ -44,4 +44,9 @@
       </plugin>
     </plugins>
   </build>
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 </project>
