--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
 	</dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.11.4</version>
+    </dependency>
 	<dependency>
 	<groupId>org.projectlombok</groupId>
 	<artifactId>lombok</artifactId>
