--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 	<artifactId>lombok</artifactId>
 	<version>1.18.6</version>
 </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
   </dependencies>
 
   <build>
