--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.cx.ast</groupId>
-  <artifactId>sdk</artifactId>
+  <artifactId>api</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
