--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.30</version>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.5</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -59,15 +59,12 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <mainClass>AwsSdkSample</mainClass>
-        </configuration>
       </plugin>
     </plugins>
   </build>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 </project>
