--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
           <version>RELEASE</version>
           <scope>test</scope>
       </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -92,11 +98,22 @@
       <name>CheckmarxDev</name>
       <url>https://maven.pkg.github.com/CheckmarxDev/ast-cli-java-wrapper</url>
     </repository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
+<!--    <repository>-->
+<!--      <id>ossrh</id>-->
+<!--      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
+<!--    </repository>-->
   </distributionManagement>
+<!--  <distributionManagement>-->
+<!--        <repository>-->
+<!--          <id>github</id>-->
+<!--          <name>CheckmarxDev</name>-->
+<!--          <url>https://maven.pkg.github.com/CheckmarxDev/ast-cli-java-wrapper</url>-->
+<!--        </repository>-->
+<!--&lt;!&ndash;    <repository>&ndash;&gt;-->
+<!--&lt;!&ndash;      <id>ossrh</id>&ndash;&gt;-->
+<!--&lt;!&ndash;      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>&ndash;&gt;-->
+<!--&lt;!&ndash;    </repository>&ndash;&gt;-->
+<!--  </distributionManagement>-->
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
