--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,30 @@ name: Integration Tests
 on: push
 
 jobs:
-  build:
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Build with Maven
+  #       env:
+  #         CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
+  #         CX_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET}}
+  #         CX_BASE_URI	: ${{ secrets.BASE_URI }}
+  #       run: mvn install
+  run_tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Build with Maven
-        env:
-          CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
-          CX_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET}}
-          CX_BASE_URI	: ${{ secrets.BASE_URI }}
-        run: mvn install
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 14
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
