--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      - name: Permissions to executable
+        run: chmod +rwx ./src/main/resources/cx-exe
       - name: Run tests with Maven
         env:
           CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
