--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ jobs:
   # build:
   #   runs-on: ubuntu-latest
   #   steps:
+
   #     - uses: actions/checkout@v2
   #     - name: Build with Maven
   #       env:
@@ -29,8 +30,8 @@ jobs:
       #     path: ~/.m2
       #     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
       #     restore-keys: ${{ runner.os }}-m2
-      # - name: Permissions to executable
-      #   run: chmod 777 ./src/main/resources/cx-exe
+      - name: Permissions to executable
+        run: cp ./src/main/resources/cx-exe /tmp/
       - name: Run tests with Maven
         env:
           CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
