--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,10 @@ jobs:
       #     path: ~/.m2
       #     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
       #     restore-keys: ${{ runner.os }}-m2
-      - name: Permissions to executable
+      - name: Copy executable
         run: cp ./src/main/resources/cx-exe /tmp/
+      - name: Permissions to executable
+        run: sudo chmod 777 /tmp/cx-exe
       - name: Run tests with Maven
         env:
           CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
