--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,5 @@ jobs:
           CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
           CX_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET}}
           CX_BASE_URI	: ${{ secrets.BASE_URI }}
+          PATH_TO_EXECUTABLE: /tmp/cx-exe
         run: mvn -B test --file pom.xml
