--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -5,7 +5,7 @@ name: Maven Package
 
 on:
   release:
-    types: [created]
+    types: [created] 
 
 jobs:
   build:
@@ -17,15 +17,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
+    - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: '8'
+        java-version: '11'
         distribution: 'adopt'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-
+    - name: Copy executable
+      run: cp ./src/main/resources/cx-exe /tmp/
+    - name: Permissions to executable
+      run: sudo chmod 777 /tmp/cx-exe
     - name: Build with Maven
+      env:
+          CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
+          CX_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET}}
+          CX_BASE_URI	: ${{ secrets.BASE_URI }}
+          PATH_TO_EXECUTABLE: /tmp/cx-exe
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
