--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Integration Tests
 on:
   push:
     branches:
-      - feature/update-results-parameters
+      - main
       - master
   pull_request:
     types: [opened, reopened, synchronize] 
