--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,6 @@ jobs:
           CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
           CX_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET}}
           CX_BASE_URI: ${{ secrets.BASE_URI }}
+          CX_TENANT: ${{ secrets.TENANT }}
           PATH_TO_EXECUTABLE: /tmp/cx-linux
         run: mvn -B test --file pom.xml
