--- a/.github/workflows/update-cli.yml
+++ b/.github/workflows/update-cli.yml
@@ -25,6 +25,7 @@ jobs:
         if: steps.checkmarx-ast-cli.outputs.current_tag != steps.checkmarx-ast-cli.outputs.release_tag
         run: |
           # Update binaries
+          chmod +x ./.github/scripts/update_cli.sh
           ./.github/scripts/update_cli.sh ${{ steps.checkmarx-ast-cli.outputs.release_tag }}
       - name: Create Pull Request
         if: steps.checkmarx-ast-cli.outputs.current_tag != steps.checkmarx-ast-cli.outputs.release_tag
