--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,3 +36,5 @@ jobs:
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml -DskipTests
+      env:
+        GITHUB_TOKEN: ${{ github.token}}
