update deploy process

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <version>1.0.13</version>
     <packaging>jar</packaging>
 
+    <name>Checkmarx AST Client</name>
+    <description>Checkmarx AST ClI SDK</description>
+    <url>https://www.checkmarx.com</url>
+
     <properties>
       <maven.compiler.source>8</maven.compiler.source>
       <maven.compiler.target>8</maven.compiler.target>
@@ -88,18 +92,39 @@
     </build>
 
     <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
         <repository>
             <id>ossrh</id>
-            <name>Central Repository OSSRH</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>Checkmarx</name>
+        <url>https://www.checkmarx.com/</url>
+    </organization>
+
+    <scm>
+        <connection>scm:git:git://github.com/CheckmarxDev/ast-cli-java-wrapper.git</connection>
+        <developerConnection>scm:git:ssh://github.com/CheckmarxDev/ast-cli-java-wrapper.git</developerConnection>
+        <url>https://github.com/CheckmarxDev/ast-cli-java-wrapper/tree/master</url>
+    </scm>
 
     <developers>
         <developer>
             <name>Jay Nanduri</name>
             <email>jay.nanduri@checkmarx.com</email>
-            <organization>Checkmarx Ltd</organization>
+            <organization>Checkmarx</organization>
             <organizationUrl>https://www.checkmarx.com/</organizationUrl>
         </developer>
     </developers>
