--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,23 +6,20 @@ jobs:
   integration-tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
+      - name: Checkout
         uses: actions/checkout@v2
+
       - name: Set up JDK 8
         uses: actions/setup-java@v1
         with:
           java-version: 8
-      - name: Copy executable
-        run: cp ./src/main/resources/cx-linux /tmp/
-      - name: Permissions to executable
-        run: sudo chmod 777 /tmp/cx-linux
+
       - name: Run tests with Maven
         env:
           CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
           CX_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET}}
           CX_BASE_URI: ${{ secrets.BASE_URI }}
           CX_TENANT: ${{ secrets.TENANT }}
-          PATH_TO_EXECUTABLE: /tmp/cx-linux
         run: mvn -B test --file pom.xml
   cx-scan:
     runs-on: ubuntu-latest
