--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,10 @@ jobs:
 
       - name: Run tests with Maven
         env:
-          CX_CLIENT_ID: ${{ secrets.CLIENT_ID}}
-          CX_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET}}
-          CX_BASE_URI: ${{ secrets.BASE_URI }}
-          CX_TENANT: ${{ secrets.TENANT }}
+          CX_CLIENT_ID: ${{ secrets.CX_CLIENT_ID}}
+          CX_CLIENT_SECRET: ${{ secrets.CX_CLIENT_SECRET}}
+          CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
+          CX_TENANT: ${{ secrets.CX_TENANT }}
         run: mvn -B test --file pom.xml
   cx-scan:
     runs-on: ubuntu-latest
@@ -39,8 +39,8 @@ jobs:
         with:
           project_name: ast-cli-java-wrapper
           branch: master
-          base_uri: ${{ secrets.BASE_URI }}
-          cx_tenant: ${{ secrets.TENANT }}
-          cx_client_id: ${{ secrets.CLIENT_ID }}
-          cx_client_secret: ${{ secrets.CLIENT_SECRET }}
-          additional_params: --tags galactica-team
+          base_uri: ${{ secrets.CX_BASE_URI }}
+          cx_tenant: ${{ secrets.CX_TENANT }}
+          cx_client_id: ${{ secrets.CX_CLIENT_ID }}
+          cx_client_secret: ${{ secrets.CX_CLIENT_SECRET }}
+          additional_params: --tags "Galactica"
