--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Set up JDK 8
         uses: actions/setup-java@v2.5.0
         with:
+          distribution: 'temurin'
           java-version: 8
 
       - name: Cache local Maven repository
