--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           distribution: 'temurin'
           server-id: ossrh
           server-username: MAVEN_USERNAME
-          server-password: ${{ secrets.OSSRH_TOKEN }}
+          server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
