try includes config on jacoco

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+                            <includes>
+                                <include>com\..*.class</include>
+                            </includes>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>generate-code-coverage-report</id>
