--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: mvn -B test --file pom.xml
 
       - name: Build with Maven
-        run: mvn -B verify
+        run: mvn -B verify -DskipTests
 
       - name: Run SpotBugs Analysis
         uses: jwgmeligmeyling/spotbugs-github-action@master
