Added gpg credentials in the step to avoid gpg error.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: 8
+          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
       - name: Cache local Maven repository
         uses: actions/cache@v3
