--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         run: mvn -B test --file pom.xml
 
       - name: Build with Maven
-        run: mvn -B verify -DskipTests
+        run: mvn -B verify -DskipTests --file pom.xml
 
       - name: Run SpotBugs Analysis
         uses: jwgmeligmeyling/spotbugs-github-action@master
