--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     schedule:
       interval: "daily"
     reviewers:
-      - "Checkmarx/ast-galactica-team"
+      - "hmmachadocx"
 
   - package-ecosystem: "github-actions"
     # Workflow files stored in the
