--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.checkmarx.ast</groupId>
-    <artifactId>ast-cli-java-wrapper</artifactId>
+    <artifactId>${ast.wrapper.id}</artifactId>
     <version>${ast.wrapper.version}</version>
     <packaging>jar</packaging>
 
@@ -14,6 +14,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <ast.wrapper.id>ast-cli-java-wrapper</ast.wrapper.id>
         <ast.wrapper.version>dev</ast.wrapper.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
