Require CLI tag

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -9,8 +9,7 @@ on:
         type: string
       cliTag:
         description: 'Version of the CLI to bundle'
-        required: false
-        default: latest
+        required: true
         type: string
 
 jobs:
