--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,3 +99,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
+          tag_name: ${{ inputs.tag }}
