Support cx-linux-arm aka running om Mac Docker

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 src/main/resources/cx-linux filter=lfs diff=lfs merge=lfs -text
+src/main/resources/cx-linux-arm filter=lfs diff=lfs merge=lfs -text
 src/main/resources/cx.exe filter=lfs diff=lfs merge=lfs -text
 src/main/resources/cx-mac filter=lfs diff=lfs merge=lfs -text
